# sov-o-o

./: .gitignore  Cargo.toml  Dockerfile  PLAN.MD
.github/workflows/: docker.yml
crd/: Cargo.toml
crd/src/: affinity.rs  lib.rs  odoodb.rs
deploy/config-spec/: properties.yaml
operator/: Cargo.toml
operator/src/: config.rs  controller_commons.rs  main.rs  odoo_controller.rs  odoo_db_controller.rs  product_logging.rs  rbac.rs  utils.rs
