[package]
name = "sovrin-cloud-crd"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
snafu = "0.7"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.44.0" }
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
serde_yaml = "0.9"